[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recallhq_recallhq"
version = "0.0.2"
license = {file = "LICENSE"}
authors = [
  { name="Arunesh Mishra", email="aruneshm@gmail.com" },
  {name="Unum Sarfraz", email="anamsarfraz@gmail.com"},
  {name="Vikram Singh", email="viky777singh@gmail.com"}
]
description = "ChatGPT for videos. We are building a capability to interact with video content and make it come alive. This includes ability to ask questions, understand the content better, generate insights and create video responses. This would be great for MOOCs, event videos such as conferences, or internal enterprise videos including meetings."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


